update unet and training for embedding

--- a/notebooks/API-tests.ipynb
+++ b/notebooks/API-tests.ipynb
@@ -1354,12 +1354,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
-    "import os"
+    "import os\n",
+    "from pathlib import Path"
    ]
   },
   {
@@ -1402,22 +1403,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_ID_from_name(file):\n",
-    "    print(file)\n",
-    "    name, _ = os.path.splitext(file)\n",
-    "    idx_list = name.split(\".\")\n",
-    "\n",
-    "    # drop any letters from the name\n",
-    "    return [re.sub(\"\\D\", \"\", s) for s in idx_list]"
+    "def get_ID_from_name(filename):\n",
+    "    return [re.sub(r\"\\D\", \"\", part) for part in Path(filename).stem.split(\".\")]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1426,7 +1422,7 @@
        "['123', '45']"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
